src/test/deca/context/invalid/created/acces_field/acces_sur_null.deca
// Description :
//   	appel d'une methode sur un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 : ??

{
null.met;
}